change JApplet by JFrame. remove AppletContext. small fixes #1 related.